[package]
edition = "2021"
name = "winit_wgpu_example"
version = "0.1.0"

[dependencies]
bytemuck = {version = "1.19.0", features = ["derive"]}
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
nalgebra-glm = {version = "0.19.0", features = [
  "convert-bytemuck",
  "serde-serialize",
]}
pollster = "0.4.0"
wgpu = {version = "22.1.0", default-features = false}
winit = "0.30.5"

[features]
default = ["wgpu/default"]
